testing lasagna image

--- a/_posts/nm/2020-01-01-lasagna.md
+++ b/_posts/nm/2020-01-01-lasagna.md
@@ -9,8 +9,8 @@ permalink: nm/recipes/lasagna
 favorite: lasagna
 # link constructed from categories (when applied + and not overridden by permalink)
 # categories: calendar
-image:
-imageAltText: this is the image alt text for ADA compliance
+image: ../../assets/imgs/recipes/lasagna/lasagna.jpg
+imageAltText: freshly baked lasagna in a ceramic casserole dish
 
 video:
 videoPoster:
