--- a/_posts/nm/2020-01-01-lasagna.md
+++ b/_posts/nm/2020-01-01-lasagna.md
@@ -15,7 +15,7 @@ imageAltText: freshly baked lasagna in a ceramic casserole dish
 video:
 videoPoster:
 # tags
-tags: [hot, keto]
+tags: [dinner, meal prep]
 
 # Timing
 prepTime: 20min.
