adding meta desciptions to posts

--- a/_posts/2020-01-01-lasagna.md
+++ b/_posts/2020-01-01-lasagna.md
@@ -4,6 +4,7 @@ date:   2018-10-22 14:46:59 -0400
 
 # Event / Post Information
 title:  "Lasagna"
+description: One of the best lasagna recipes on the internet.
 author: Ryaan Beck
 permalink: recipes/lasagna
 favorite: lasagna
