updating README and testing a cinemagraph / gif for lasagna

--- a/_posts/2020-01-01-lasagna.md
+++ b/_posts/2020-01-01-lasagna.md
@@ -10,7 +10,7 @@ permalink: recipes/lasagna
 favorite: lasagna
 # link constructed from categories (when applied + and not overridden by permalink)
 # categories: calendar
-image: ../../assets/imgs/recipes/lasagna/lasagna.jpg
+image: ../../assets/imgs/recipes/lasagna/onion.gif
 imageAltText: freshly baked lasagna in a ceramic casserole dish
 
 video:
