wrapping up recipe macro break down. production ready files added.

--- a/_posts/2020-01-01-baked-mac.md
+++ b/_posts/2020-01-01-baked-mac.md
@@ -23,55 +23,143 @@ prepTime: 20min.
 cookTime: 1hr.
 
 # Nutrition
-calCount: 427
+
 servingsCount: 8
-
-# Macros
-macroList:
-  - name: Carbs
-    amount: 34g
-  - name: Fat
-    amount: 22g
-  - name: Cholesterol
-    amount: 84mg
-  - name: Sodium
-    amount: 385mg
-  - name: Sugar
-    amount: 4g
-  - name: Protein
-    amount: 22g
-  - name: Fiber
-    amount: 1.5g
-  - name: THC
-    amount: n/a
-
 
 # Ingredients
 ingredientList:
   - name: rotini noodles
     amount: 12 oz.
+    cals: 1680
+    carbs: 328
+    fats: 8
+    chole: 0
+    sodium: 0
+    sugar: 16
+    protein: 80
+    fiber: 16
+    thc: 0
   - name: unsalted butter
     amount: 4 Tbsp.
+    cals: 400
+    carbs: 0
+    fats: 44
+    chole: 120
+    sodium: 0
+    sugar: 0
+    protein: 0
+    fiber: 0
+    thc: 0
   - name: milk
     amount: 2 cups  
+    cals: 246
+    carbs: 22
+    fats: 8
+    chole: 38
+    sodium: 230
+    sugar: 24
+    protein: 16
+    fiber: 0
+    thc: 0
   - name: flour
     amount: 3 Tbsp.
+    cals: 50
+    carbs: 8
+    fats: 0
+    chole: 0
+    sodium: 0
+    sugar: 0
+    protein: 0
+    fiber: 0
+    thc: 0
   - name: garlic (crushed)
     amount: 3 cloves
+    cals: 15
+    carbs: 3
+    fats: 0
+    chole: 0
+    sodium: 0
+    sugar: 0
+    protein: 0
+    fiber: 0
+    thc: 0
   - name: sweet onion (diced)  
     amount: 1/3 cup
+    cals: 152
+    carbs: 32
+    fats: 0
+    chole: 0
+    sodium: 16
+    sugar: 16
+    protein: 0
+    fiber: 0
+    thc: 0
   - name: egg
     amount: 1 large
+    cals: 71
+    carbs: 0
+    fats: 4
+    chole: 186
+    sodium: 71
+    sugar: 0
+    protein: 6
+    fiber: 0
+    thc: 0
   - name: extra sharp cheddar cheese (grated)
     amount: 1/2 cup
+    cals: 300
+    carbs: 0
+    fats: 24
+    chole: 80
+    sodium: 450
+    sugar: 0
+    protein: 15
+    fiber: 0
+    thc: 0
   - name: havarti cheese (grated)
     amount: 1/2 cup
+    cals: 300
+    carbs: 0
+    fats: 24
+    chole: 80
+    sodium: 450
+    sugar: 0
+    protein: 15
+    fiber: 0
+    thc: 0
   - name: mozzarella (cubed)
     amount: 1/2 cup
+    cals: 640
+    carbs: 0
+    fats: 48
+    chole: 0
+    sodium: 440
+    sugar: 0
+    protein: 40
+    fiber: 0
+    thc: 0
   - name: parmesan (grated)
     amount: 1/2 Cup
+    cals: 100
+    carbs: 0
+    fats: 8
+    chole: 20
+    sodium: 224
+    sugar: 0
+    protein: 8
+    fiber: 0
+    thc: 0
   - name: panko bread crumbs
     amount: 1 Cup
+    cals: 220
+    carbs: 2
+    fats: 0
+    chole: 0
+    sodium: 18
+    sugar: 0
+    protein: 0
+    fiber: 0
+    thc: 0
 
 # Seasoning
 seasoningList:
