--- a/_posts/nm/2020-01-01-red-chili.md
+++ b/_posts/nm/2020-01-01-red-chili.md
@@ -1,12 +1,12 @@
 ---
-layout: post
+layout: nm/nm-post
 date:   2018-10-22 14:46:59 -0400
 
 # Event / Post Information
 title:  "Red Chili"
 description: Some call it Crack n Cheese because it's so good.
 author: TLDRecipe
-permalink: recipes/red-chili
+permalink: nm/recipes/red-chili
 favorite: red-chili
 # link constructed from categories (when applied + and not overridden by permalink)
 # categories: calendar
