--- a/_posts/nm/2020-01-01-lasagna.md
+++ b/_posts/nm/2020-01-01-lasagna.md
@@ -23,57 +23,153 @@ prepTime: 20min.
 cookTime: 1hr.
 
 # Nutrition
-calCount: 448
-servingsCount: 12
-
-# Macros
-macroList:
-  - name: Carbs
-    amount: 36.5g
-  - name: Fat
-    amount: 21g
-  - name: Cholesterol
-    amount: 82mg
-  - name: Sodium
-    amount: 1400mg
-  - name: Sugar
-    amount: 9g
-  - name: Protein
-    amount: 30g
-  - name: Fiber
-    amount: 4g
-  - name: THC
-    amount: n/a
-
+servingsCount: 10
 
 # Ingredients
 ingredientList:
   - name: sweet italian sausage
     amount: 1 lb.
-  - name: lean ground beef
+    cals: 1200
+    carbs: 24
+    fats: 104
+    chole: 360
+    sodium: 4000
+    sugar: 8
+    protein: 80
+    fiber: 0
+    thc: 0
+  - name: ground beef (90%)
     amount: 1 lb.
-  - name: sweet onion (minced)
+    cals: 800
+    carbs: 0
+    fats: 44
+    chole: 300
+    sodium: 300
+    sugar: 0
+    protein: 88
+    fiber: 0
+    thc: 0
+  - name: sweet onion (diced)
     amount: 1/2 Cup
+    cals: 152
+    carbs: 32
+    fats: 0
+    chole: 0
+    sodium: 16
+    sugar: 16
+    protein: 0
+    fiber: 0
+    thc: 0
   - name: garlic (crushed)
     amount: 2 cloves
+    cals: 15
+    carbs: 3
+    fats: 0
+    chole: 0
+    sodium: 0
+    sugar: 0
+    protein: 0
+    fiber: 0
+    thc: 0
   - name: lasagna noodles
     amount: 12
+    cals: 1080
+    carbs: 222
+    fats: 6
+    chole: 0
+    sodium: 0
+    sugar: 12
+    protein: 42
+    fiber: 12
+    thc: 0
   - name: tomato paste
     amount: 2 can (6 oz./ea)
+    cals: 72
+    carbs: 12
+    fats: 0
+    chole: 0
+    sodium: 40
+    sugar: 6
+    protein: 4
+    fiber: 2
+    thc: 0
   - name: crushed tomatoes
     amount: 1 can (28 oz.)
+    cals: 240
+    carbs: 48
+    fats: 0
+    chole: 0
+    sodium: 1140
+    sugar: 24
+    protein: 12
+    fiber: 12
+    thc: 0
   - name: canned tomato sauce
     amount: 2 cans (6.5 oz./ea)
+    cals: 40
+    carbs: 12
+    fats: 0
+    chole: 0
+    sodium: 520
+    sugar: 6
+    protein: 2
+    fiber: 0
+    thc: 0
   - name: pasta water
     amount: 1/2 Cup
+    cals: 0
+    carbs: 0
+    fats: 0
+    chole: 0
+    sodium: 0
+    sugar: 0
+    protein: 0
+    fiber: 0
+    thc: 0
   - name: ricotta cheese
     amount: 16 oz.
+    cals: 707
+    carbs: 18
+    fats: 45
+    chole: 0
+    sodium: 0
+    sugar: 0
+    protein: 45
+    fiber: 0
+    thc: 0
   - name: egg
-    amount: 1
+    amount: 1 large
+    cals: 71
+    carbs: 0
+    fats: 4
+    chole: 186
+    sodium: 71
+    sugar: 0
+    protein: 6
+    fiber: 0
+    thc: 0
   - name: mozzarella cheese (sliced)
     amount: 3/4 lb.
+    cals: 640
+    carbs: 0
+    fats: 48
+    chole: 0
+    sodium: 440
+    sugar: 0
+    protein: 40
+    fiber: 0
+    thc: 0
   - name: grated parmesan cheese
     amount: 3/4 cup
+    cals: 100
+    carbs: 0
+    fats: 8
+    chole: 20
+    sodium: 224
+    sugar: 0
+    protein: 8
+    fiber: 0
+    thc: 0
 
 # Seasoning
 seasoningList:
